--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node ./local.js",
     "test": "jest"
   },
   "repository": {
@@ -18,6 +19,9 @@
   },
   "homepage": "https://github.com/paulbulman/parking-api#readme",
   "devDependencies": {
+    "body": "^5.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "jest": "^24.9.0"
   },
   "dependencies": {
