Wire up single user get/update to DynamoDB

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/paulbulman/parking-api#readme",
   "devDependencies": {
+    "aws-sdk": "^2.635.0",
     "body": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
