--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
   },
   "homepage": "https://github.com/paulbulman/parking-api#readme",
   "devDependencies": {
-    "aws-sdk": "^2.653.0",
+    "aws-sdk": "^2.720.0",
     "body": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jest": "^25.2.7"
   },
   "dependencies": {
-    "aws-lambda-router": "^0.8.2",
     "jsonwebtoken": "^8.5.1",
+    "lambda-api": "^0.10.6",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28"
   }
